# gemini-mvp

./: .gitignore  DEPLOY.md  Dockerfile  README.md  alert.py  api_gateway.py  certify.py  controller.py  docker-compose.yml  mvp-status.sh  pyproject.toml  pyproject.toml.bak  registry.json  run_agent.sh  run_alert.sh  run_controller.sh  run_gateway.sh  run_telemetry.sh  signing.key  streamlit_app.py  streamlit_app.py.bak  telemetry.json  telemetry.py
GeminiAgent/: BackupHelper.swift  ContentView.swift  GeminiAgent.entitlements  GeminiAgentApp.swift  KeychainHelper.swift
_backup/: api_gateway.py  certify.py  controller.py  run_agent.sh  telemetry.py
api/: job_status.py
app/: anchor_service.py  anchor_service.py.bak  anchor_service.py.bak2
certify/: certify.yml  cli.py  config.py  engine.py
cli/: certify.py  crypto.py  daemon.py  merkle.py  storage.py  verify.py
dev/: run.sh
docs/: MVP7_ROADMAP.md  README.md  finder-badge-verify.md  ops-guide.mdX  tech-spec.md
gemini_mvp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
installer/: README.md
launchd/: com.gemini.telemetry.agent.plist  com.gemini.telemetry.server.plist
logs/: update-audit.log.bak.pre-prune
registry/: __init__.py  store.py
releases/: releases.json
runtime/: mock_server.py
scripts/: install-daemon.sh  install_finder_extension.sh  run-health-server.sh  run-telemetry-agent.sh  uninstall-daemon.sh  uninstall_finder_extension.sh  update-apply.sh  update-audit-append.sh  update-rollback.sh
telemetry/: README.md  agent.py  health_checks.py  health_server.py  heartbeat.py
(+48 files in other folders)
