[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-mvp"
version = "0.1.0"
requires-python = ">=3.11"
description = "Gemini workspace (includes certify module)"
readme = "README.md"

[project.scripts]
certify = "certify.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["certify*"]
